# j-space-non-llm

./: .gitignore  README.md  pyproject.toml
scripts/: evaluate_lens.py  fit_lens.py  serve.py  train.py  visualize.py
src/jspace/: __init__.py  config.py  data.py  fitting.py  interventions.py  lens.py  model.py  server.py  viz.py
tests/: conftest.py  test_fitting.py  test_lens.py  test_model.py  test_server.py  test_viz.py
